@@ -9,23 +9,52 @@ public class Hotel {
   /**
   *the name of the hotel
   */
-  private String name; 
+  private String name;
   /**
   *list of rooms in the hotel
   */
-  private ArrayList<Room> rooms = new ArrayList<Room>(); 
-
+  private ArrayList<Room> rooms = new ArrayList<Room>();
+  private ArrayList<Double> DatePrice;
   /**
    * Constructs a hotel with a specified name and number of rooms.
    *
    * @param name     the name of the hotel
    * @param numrooms the number of rooms in the hotel
    */
-  public Hotel(String name, int numrooms) {// use numrooms to construct all rooms using a for loop
-    this.name = name;
-    this.rooms = new ArrayList<Room>();
-    for (int i = 0; i < numrooms; i++)
-      this.rooms.add(new Room(i + 100, 1299.0));
+  public Hotel(String name, int numrooms, int type) {
+    int Amounteach = numrooms / 3;
+    int i, j, k;
+    this.DatePrice = new ArrayList<Double>();
+    for(i = 0; i < 31; i++)
+    {
+      this.DatePrice.add(1.00);
+    }
+    // use numrooms to construct all rooms using a for loop
+    switch(type){
+      case 1:
+        this.name = name;
+        this.rooms = new ArrayList<Room>();
+        for (i = 0; i < numrooms; i++)
+          this.rooms.add(new standardRoom(i + 100, 1299.0));
+        break;
+      case 2:
+        this.name = name;
+        this.rooms = new ArrayList<>();
+        for(i = 0; i < Amounteach; i++){
+          this.rooms.add(new standardRoom(i + 100, 1299.0));
+        }
+        for(j = i ; j < Amounteach * 2; j++)
+          this.rooms.add(new executiveRoom(j + 100, 1299.0));
+        for(k = j; k < Amounteach * 3; k++)
+          this.rooms.add(new deluxeRoom(k + 100, 1299.0));
+
+        while(k < numrooms)
+        {
+          this.rooms.add(new deluxeRoom(k + 100, 1299.0));
+          k++;
+        }
+        break;
+    }
 
   }
 
@@ -36,23 +65,49 @@ public class Hotel {
    * @param numrooms the number of rooms in the hotel
    * @param price    the price of each room
    */
-  public Hotel(String name, int numrooms, double price) {// other variation of hotel to include price
+  public Hotel(String name, int numrooms, double price, int type) {// other variation of hotel to include price
 
-    this.name = name;
-    this.rooms = new ArrayList<Room>();
-    for (int i = 0; i < numrooms; i++)
-      this.rooms.add(new Room(i + 100, price));
+    int Amounteach = numrooms / 3;
+    int i, j, k;
+    this.DatePrice = new ArrayList<Double>();
+    for(i = 0; i < 31; i++)
+    {
+      this.DatePrice.add(1.00);
+    }
+    // use numrooms to construct all rooms using a for loop
+    switch(type){
+      case 1:
+        this.name = name;
+        this.rooms = new ArrayList<>();
+        for (i = 0; i < numrooms; i++)
+          this.rooms.add(new standardRoom(i + 100, price));
+        break;
+      case 2:
+        this.name = name;
+        this.rooms = new ArrayList<>();
+        for(i = 0; i < Amounteach; i++){
+          this.rooms.add(new standardRoom(i + 100, price));
+        }
+        for(j = i ; j < Amounteach * 2; j++)
+          this.rooms.add(new executiveRoom(j + 100, price));
+        for(k = j; k < Amounteach * 3; k++)
+          this.rooms.add(new deluxeRoom(k + 100, price));
 
+        while(k < numrooms)
+        {
+          this.rooms.add(new deluxeRoom(k + 100, price));
+          k++;
+        }
+        break;
+    }
   }
-
   /**
    * Default constructor for creating an empty hotel.
    */
   public Hotel() {
-    this.rooms = new ArrayList<Room>();
+    this.rooms = new ArrayList<>();
 
   }
-
 
   /**
    * Gets the name of the hotel.
@@ -61,33 +116,6 @@ public class Hotel {
    */
   public String getName() {
     return this.name;
-  }
-
-  /**
-   * Gets the number of rooms for the hotel.
-   *
-   * @return the number of rooms of the hotel
-   */
-  public int getNumRooms() {
-    return this.rooms.size();
-  }
-
-  /** TODO: CHANGE THIS TO THE NEW ONE WHICH HAS DIFFERENT STUFFS
-   * Gets the price of the hotel rooms.
-   *
-   * @return the price for the rooms of the hotel
-   */
-  public double getRoomPrice() {
-    return this.rooms.get(1).getPrice();
-  }
-
-  /**
-   * Gets the rooms of the hotel.
-   *
-   * @return an arraylist containing the rooms of the hotel
-   */
-  public ArrayList<Room> getRooms() {
-    return this.rooms;
   }
 
   /**
@@ -111,20 +139,31 @@ public class Hotel {
    * @param ID the ID of the new room
    * @param scan the scanner passed from main
    */
-  public void addRoom(int ID, Scanner scan) {
+  public void addRoom(int ID, Scanner scan, int model) {
     if (isUniqueRoom(ID)) {
-        System.out.print("Are you sure you want to add room: " + ID + "? (Y/N) ");
-        char choice = scan.next().charAt(0);
-        if (choice == 'y' || choice == 'Y') {
-            rooms.add(new Room(ID, rooms.get(0).getPrice()));
-            System.out.println("\n>>  Room added successfully.  <<\n");
-        } else {
-            System.out.println("\n>>  Modification discarded.  <<\n");
+      System.out.print("Are you sure you want to add room: " + ID + "? (Y/N) ");
+      char choice = scan.next().charAt(0);
+      if (choice == 'y' || choice == 'Y') {
+        switch(model){
+          case 1:
+            rooms.add(new standardRoom(ID, rooms.getFirst().getPrice()));
+            break;
+          case 2:
+            rooms.add(new deluxeRoom(ID, rooms.getFirst().getPrice()));
+            break;
+          case 3:
+            rooms.add(new executiveRoom(ID, rooms.getFirst().getPrice()));
+            break;
         }
+        System.out.println("\n>>  Room added successfully.  <<\n");
+      } else {
+        System.out.println("\n>>  Modification discarded.  <<\n");
+      }
     } else {
-        System.out.println("\n>>  Room name already exists.  <<\n");
+      System.out.println("\n>>  Room name already exists.  <<\n");
     }
-}
+  }
+
 
 
   /**
@@ -133,12 +172,10 @@ public class Hotel {
    * @return the total revenue
    */
   public double sumTotal() {
-    int i, j;
+    int i;
     double sum = 0;
     for (i = 0; i < rooms.size(); i++) {
-      for (j = 0; j < rooms.get(i).getReservations().size(); j++) {
-        sum += rooms.get(i).getReservations().get(j).getTotalPrice(); // adds all the reservations totalprice to sum
-      }
+      sum += rooms.get(i).getTotalPrice(); // adds all the rooms totalprice to sum
     }
     return sum;
   }
@@ -292,7 +329,8 @@ public class Hotel {
     System.out.println("<<4. Update base price of rooms>>");
     System.out.println("<<5. Remove Reservation>>");
     System.out.println("<<6. Remove hotel>>");
-    System.out.println("<<7. Back to Menu>>");
+    System.out.println("<<7. Modify Date Price>>");
+    System.out.println("<<8. Back to Menu>>");
     System.out.print("Please select an option: ");
 
     int choice = scan.nextInt();
@@ -330,9 +368,18 @@ public class Hotel {
               System.out.println(">>        Please enter an ID fit to our standard (100, 101, 102 ... 199)      <<");
             } else {
               scan.nextLine();
-              addRoom(newRoomID, scan);
+              System.out.println("1. Standard Room");
+              System.out.println("2. Deluxe Room");
+              System.out.println("3. Executive Room");
+              System.out.print("Enter room type: ");
+              int model = scan.nextInt();
+              while(model < 1 || model > 3)
+              {
+                System.out.print("Invalid input, please choose from 1-3.");
+                model = scan.nextInt();
+              }
+              addRoom(newRoomID, scan, model);
             }
-
           }
 
         } else {
@@ -362,6 +409,9 @@ public class Hotel {
         }
         break;
       case 7:
+        DatePriceModify(scan);
+        break;
+      case 8:
         return;
       default:
         System.out.println(">>       Invalid choice, please try again.      <<");
@@ -383,7 +433,7 @@ public class Hotel {
 
     int roomindex;
     int column = 5;
-    ArrayList<Integer> removable = new ArrayList<Integer>();
+    ArrayList<Integer> removable = new ArrayList<>();
     for (int i = 0; i < rooms.size(); i++) {
       if (rooms.get(i).getReservations().isEmpty())
         removable.add(rooms.get(i).getID());//store all IDs into the removable arraylist, which can then be used to make prettier
@@ -415,7 +465,7 @@ public class Hotel {
         roomindex = searchRoom(room);
     }
 
-    if (rooms.get(roomindex).getReservations().size() > 0)// for room with reservations
+    if (!rooms.get(roomindex).getReservations().isEmpty())// for room with reservations
     {
       System.out.println(">>        Room selected has active reservations, please remove them first     <<");
     } else// for actual room removal
@@ -589,6 +639,10 @@ public class Hotel {
   public void simulateBooking(Scanner scan) {
     int checkin = 0;
     int checkout = 0;
+    double price;
+    int numNights = 0;
+    double percentage = 0;
+    int firstdate = 0;
     System.out.print("Enter Check-in date (1-30):");
     checkin = scan.nextInt();
     scan.nextLine(); // Consume newline
@@ -622,13 +676,24 @@ public class Hotel {
       mechanismChoice = scan.nextInt();
       scan.nextLine();
     }
+    //Type of room to book
+    System.out.println("1. Standard Room");
+    System.out.println("2. Executive Room");
+    System.out.println("3. Deluxe Room");
+    System.out.print("Which tier of room would you like to book? (1-3): ");
+    int Roomtype = scan.nextInt();
+    while(Roomtype < 1 || Roomtype > 3)
+    {
+      System.out.print("Invalid input. please try again (1-3): ");
+      Roomtype = scan.nextInt();
+    }
 
     Room availableRoom = null; // Initialize to null, will later store a reference to an available room
 
     if (mechanismChoice == 1) {
       // Automated mechanism
       System.out.println("Automated mechanism selected...");
-      availableRoom = selectAutomatically(checkin, checkout);
+      availableRoom = selectAutomatically(checkin, checkout, Roomtype);
 
       if (availableRoom != null) {
         System.out.println("Booked room " + availableRoom.getID() + " successfully!");
@@ -639,7 +704,7 @@ public class Hotel {
     } else if (mechanismChoice == 2) {
       // Manual mechanism
       System.out.println("Manual mechanism selected...");
-      availableRoom = selectManually(checkin, checkout, scan);
+      availableRoom = selectManually(checkin, checkout, scan, Roomtype);
 
       if (availableRoom != null) {
         System.out.println("Selected room " + availableRoom.getID() + " successfully!");
@@ -653,15 +718,59 @@ public class Hotel {
     if (availableRoom != null) {
       System.out.print("Enter guest name: ");
       String guestName = scan.nextLine();
+      numNights = checkout - checkin;
+      firstdate = checkin;
+      while(checkin < checkout)
+      {
+        percentage += DatePrice.get(checkin - 1);
+        checkin++;
+      }
+      System.out.println("Percentage %: " + percentage);
+      System.out.print("Do you have a discount code? (Y/N): ");
+      char discountChoice = scan.next().charAt(0);
+      scan.nextLine();
+      if (discountChoice == 'Y' || discountChoice == 'y')
+      {
+        System.out.print("Code: ");
+        String code = scan.nextLine();
+        if(code.equals("I_WORK_HERE"))
+        {
+          price = availableRoom.getPrice() * percentage * 0.9;
+          System.out.println("Applying 10% discount...");
+        }
+        else if(code.equals("STAY4_GET1") && numNights > 4)
+        {
+          price = availableRoom.getPrice() * (percentage - DatePrice.get(firstdate - 1));
+          System.out.println("Removing price for first day...");
+        }
+        else if (code.equals("PAYDAY") && (availableRoom.getAvailability(15) || availableRoom.getAvailability(30)))
+        {
+          price = (availableRoom.getPrice() * percentage * 0.93);
+          System.out.println("Applying 6% discount...");
+        }
+        else if (code.equals("PAYDAY") && !(availableRoom.getAvailability(15) || availableRoom.getAvailability(30)))
+        {
+          System.out.print("Day 15 or 30 should be included as a checkin time. Default price will be applied with no discounts.\n");
+          price = percentage * availableRoom.getPrice();
+        }
+        else
+          price = percentage * availableRoom.getPrice();
+      }
+      // put the flags here, if else etc
+      else
+      {
+        price = percentage * availableRoom.getPrice();
+      }
+
       availableRoom.addReservation(guestName, checkin, checkout);
-      int numNights = checkout - checkin;
-      double price = numNights * availableRoom.getPrice();
-      
+
+
       System.out.println("\nBooking successful for guest " + guestName + " in room " + availableRoom.getID());
       System.out.printf("Total price after booking %d nights: $%.2f\n", numNights, price);
-
+      availableRoom.addTotalPrice(price);
     }
   }
+
 
   /**
    * Method for finding an available room for a given check-in and check-out
@@ -671,7 +780,7 @@ public class Hotel {
    * @param checkout the check-out date
    * @return the available room, or null if no rooms are available
    */
-  private Room selectAutomatically(int checkin, int checkout) {
+  private Room selectAutomatically(int checkin, int checkout, int type) {
     for (int i = 0; i < rooms.size(); i++) {
       boolean available = true;
       for (int day = checkin - 1; day < checkout - 1; day++) {
@@ -680,9 +789,13 @@ public class Hotel {
           break;
         }
       }
-      if (available) {
+      if (available && type == 1 && rooms.get(i).getType().equals("standardRoom")){
         return rooms.get(i);
       }
+      else if(available && type == 2 && rooms.get(i).getType().equals("executiveRoom"))
+        return rooms.get(i);
+      else if(available && type == 3 && rooms.get(i).getType().equals("deluxeRoom"))
+        return rooms.get(i);
     }
     return null;
   }
@@ -695,8 +808,10 @@ public class Hotel {
    * @param scan the scanner passed from main
    * @return the selected room, or null if no rooms are available
    */
-  private Room selectManually(int checkin, int checkout, Scanner scan) {
-    ArrayList<Room> availableRooms = new ArrayList<Room>();
+  private Room selectManually(int checkin, int checkout, Scanner scan, int type) {
+    ArrayList<Room> availableStandardRooms = new ArrayList<Room>();
+    ArrayList<Room> availableDeluxeRooms = new ArrayList<Room>();
+    ArrayList<Room> availableExecutiveRooms = new ArrayList<Room>();
     for (int i = 0; i < rooms.size(); i++) {
       boolean available = true;
       for (int day = checkin - 1; day < checkout - 1; day++) {
@@ -706,26 +821,62 @@ public class Hotel {
         }
       }
       if (available) {
-        availableRooms.add(rooms.get(i));
-        System.out.println("(" + (availableRooms.size()) + ".) Room " + rooms.get(i).getID());
+        if (rooms.get(i).getType().equals("standardRoom") && type == 1)
+        {
+          availableStandardRooms.add(rooms.get(i));
+          System.out.println("(" + (availableStandardRooms.size()) + ".) Room " + rooms.get(i).getID());
+        }
+        else if(rooms.get(i).getType().equals("executiveRoom") && type == 2)
+        {
+          availableExecutiveRooms.add(rooms.get(i));
+          System.out.println("(" + (availableExecutiveRooms.size()) + ".) Room " + rooms.get(i).getID());
+        }
+        else if(rooms.get(i).getType().equals("deluxeRoom") && type == 3)
+        {
+          availableDeluxeRooms.add(rooms.get(i));
+          System.out.println("(" + (availableDeluxeRooms.size()) + ".) Room " + rooms.get(i).getID());
+        }
       }
     }
 
-    if (availableRooms.size() > 0) {
+    if (availableStandardRooms.size() > 0 || availableExecutiveRooms.size() > 0 || availableDeluxeRooms.size() > 0) {
       boolean validChoice = false;
       while (!validChoice) {
         System.out.print("Select a room(number on the left side): ");
         int roomChoice = scan.nextInt();
-        scan.nextLine(); // Consume newline
-
-        if (roomChoice > 0 && roomChoice <= availableRooms.size()) {
-          return availableRooms.get(roomChoice - 1);
-        } else {
+        scan.nextLine();// Consume newline
+        if (roomChoice > 0 && roomChoice <= availableStandardRooms.size() && type == 1 && availableStandardRooms.get(roomChoice - 1).getType().equals("standardRoom"))
+          return availableStandardRooms.get(roomChoice - 1);
+        else if(roomChoice > 0 && roomChoice <= availableExecutiveRooms.size() && type == 2 && availableExecutiveRooms.get(roomChoice - 1).getType().equals("executiveRoom"))
+          return availableExecutiveRooms.get(roomChoice - 1);
+        else if(roomChoice > 0 && roomChoice <= availableDeluxeRooms.size() && type == 3 && availableDeluxeRooms.get(roomChoice - 1).getType().equals("deluxeRoom"))
+          return availableDeluxeRooms.get(roomChoice - 1);
+        else {
           System.out.println("Invalid choice, try again.");
         }
       }
     }
     return null;
   }
-
+  public void DatePriceModify(Scanner scan){
+    System.out.print("Which date would you like to modify (1-31): ");
+    int date = scan.nextInt();
+    scan.nextLine();
+    while(date < 1 || date > 31){
+      System.out.print("Invalid input. please try again (1-31): ");
+      date = scan.nextInt();
+      scan.nextLine();
+    }
+    System.out.print("Enter new percentage for date (50-150): ");
+    double percentage = scan.nextDouble();
+    scan.nextLine();
+    while(percentage < 50 || percentage > 150)
+    {
+      System.out.print("Invalid input. please try again (50-150): ");
+      percentage = scan.nextDouble();
+      scan.nextLine();
+    }
+    this.DatePrice.set(date - 1, percentage / 100);
+    System.out.println("Price for date: " + date + " has been changed to " + percentage + "%");
+  }
 }
